<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item android:title="@string/explorar">
        <menu>

            <group android:checkableBehavior="single">

                <item
                    android:id="@+id/nav_home_adm"
                    android:icon="@drawable/ic_home"
                    android:title="@string/menubar_home" />

                <item
                    android:id="@+id/nav_profile_adm"
                    android:icon="@drawable/ic_profile"
                    android:title="@string/menubar_perfil" />
                <item
                    android:id="@+id/nav_contact_adm"
                    android:icon="@drawable/ic_email"
                    android:title="@string/menubar_contato" />

                <item
                    android:id="@+id/nav_help_adm"
                    android:icon="@drawable/ic_help"
                    android:title="@string/menubar_ajuda" />

                <item
                    android:id="@+id/nav_config_adm"
                    android:icon="@drawable/ic_settings"
                    android:title="@string/menubar_configuracoes" />
            </group>


        </menu>

    </item>




    <group android:checkableBehavior="single">
        <item

            android:id="@+id/nav_logout_adm"
            android:icon="@drawable/ic_logout"
            android:title="@string/logout" />


    </group>



</menu>