<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".TorneSeAdmFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            >

            <com.google.android.material.imageview.ShapeableImageView
                android:layout_width="match_parent"
                android:layout_height="240dp"
                android:src="@drawable/imgbiblio"
                android:scaleType="fitXY"
                app:shapeAppearance="@style/headerCadastroBiblio"
                android:adjustViewBounds="true"
                />

            <View
                android:layout_width="match_parent"
                android:layout_height="240dp"
                android:background="@drawable/custom_image_cadastro_biblio"

                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="240dp"
                android:fontFamily="@font/exo2_medium"
                android:letterSpacing=".03"
                android:paddingTop="60dp"
                android:text="@string/torne_se_adm"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textColor="#CCEEEEEE"
                android:textSize="48sp" />






        </RelativeLayout>


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="30dp"
            >




        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="50dp"

            >


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="35dp"
            android:layout_marginRight="35dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/se_atente_ao_que_pede"
                android:textSize="18sp"
                android:textColor="@color/cinza_tom_escuro"
                android:fontFamily="@font/exo2_bold"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/dados_pessoais"
                android:textSize="27sp"
                android:textColor="@color/laranja_padrao"
                android:fontFamily="@font/exo2_bold"
                android:layout_marginTop="12dp"/>



            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/nome_completo"
                android:fontFamily="@font/exo2_bold"
                android:layout_marginTop="25dp"
                android:textSize="18sp"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/exemplo_nome_completo"
                android:fontFamily="@font/exo2_medium"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/cpf"
                android:fontFamily="@font/exo2_bold"
                android:layout_marginTop="15dp"
                android:textSize="18sp"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/exemplo_cpf"
                android:fontFamily="@font/exo2_medium"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/email"
                android:fontFamily="@font/exo2_bold"
                android:layout_marginTop="15dp"
                android:textSize="18sp"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/exemplo_email"
                android:fontFamily="@font/exo2_medium"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/rg"
                android:fontFamily="@font/exo2_bold"
                android:layout_marginTop="15dp"
                android:textSize="18sp"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/exemplo_rg"
                android:fontFamily="@font/exo2_medium"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/dados_da_biblioteca"
                android:textSize="27sp"
                android:textColor="@color/laranja_padrao"
                android:fontFamily="@font/exo2_bold"
                android:layout_marginTop="25dp"/>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/nome_biblioteca"
                android:fontFamily="@font/exo2_bold"
                android:layout_marginTop="25dp"
                android:textSize="18sp"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/exemplo_nome_biblioteca"
                android:fontFamily="@font/exo2_medium"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/cnpj"
                android:fontFamily="@font/exo2_bold"
                android:layout_marginTop="5dp"
                android:textSize="18dp"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/exemplo_cnpj"
                android:fontFamily="@font/exo2_medium"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/endereco_biblioteca"
                android:fontFamily="@font/exo2_bold"
                android:layout_marginTop="5dp"
                android:textSize="18dp"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/exemplo_endereco_biblioteca"
                android:fontFamily="@font/exo2_medium"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/telefone_biblioteca"
                android:fontFamily="@font/exo2_bold"
                android:layout_marginTop="5dp"
                android:textSize="18dp"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/exemplo_telefone_biblioteca"
                android:fontFamily="@font/exo2_medium"/>






            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="30dp"
                >


                <Button
                    android:id="@+id/btn_cancelar"
                    android:layout_width="135dp"
                    android:layout_height="40dp"
                    android:text="@string/btn_cancelar"
                    android:fontFamily="@font/exo2_bold"
                    android:textAllCaps="false"
                    android:textSize="16sp"
                    android:textColor="@color/white"
                    android:background="@drawable/custom_button_back"
                    />

                <Button
                    android:id="@+id/btn_enviar_solicitacao"
                    android:layout_width="135dp"
                    android:layout_height="40dp"
                    android:layout_marginLeft="50dp"
                    android:text="@string/btn_enviar"
                    android:fontFamily="@font/exo2_bold"
                    android:textAllCaps="false"
                    android:textSize="16sp"
                    android:textColor="@color/white"
                    android:background="@drawable/custom_button_cadastrar"
                    />


            </LinearLayout>


        </LinearLayout>





        </LinearLayout>

        </ScrollView>

    </LinearLayout>







</FrameLayout>