<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ContatoFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/contato"
            android:layout_marginTop="40dp"
            android:layout_marginLeft="30dp"
            android:textColor="@color/laranja_padrao"
            android:fontFamily="@font/exo2_medium"
            android:textSize="40sp"
            />


        <Button
            android:id="@+id/btn_fechar_contato"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginLeft="335dp"
            android:layout_marginTop="50dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/botao_fechar_vermelho"
            android:fontFamily="sans-serif"
            android:text="@string/botao_fechar"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:ignore="MissingConstraints" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="560dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="155dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/custom_form_contato"
            android:orientation="vertical"
            android:padding="15dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="165dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">


                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/exo2_bold"
                        android:text="@string/primeiro_nome"
                        android:textSize="18sp" />

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/exo2_medium"
                        android:hint="@string/ex_primeiro_nome_contato"
                        android:textSize="18sp"
                        android:id="@+id/et_primeiro_nome"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="165dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:orientation="vertical">


                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/exo2_bold"
                        android:text="@string/ultimo_nome"
                        android:textSize="18sp" />

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/exo2_medium"
                        android:hint="@string/ex_ultimo_nome_contato"
                        android:textSize="18sp"
                        android:id="@+id/et_ultimo_nome"/>

                </LinearLayout>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:orientation="vertical">


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/exo2_bold"
                    android:text="@string/email_contato"
                    android:textSize="18sp" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/exo2_medium"
                    android:hint="@string/ex_email_contato"
                    android:textSize="18sp"
                    android:id="@+id/et_email_contato"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:orientation="vertical">


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/exo2_bold"
                    android:text="@string/numero_celular_contato"
                    android:textSize="18sp" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/exo2_medium"
                    android:hint="@string/ex_nro_celular_contato"
                    android:textSize="18sp"
                    android:id="@+id/et_numero_telefone"/>

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:orientation="vertical">


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/exo2_bold"
                    android:text="@string/mensagem_contato"
                    android:textSize="18sp" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:fontFamily="@font/exo2_medium"
                    android:hint="@string/ex_mensagem_contato"
                    android:textSize="18sp"
                    android:id="@+id/et_mensagem_contato"/>

                <Button
                    android:id="@+id/btn_enviar_contato"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="35dp"
                    android:layout_marginRight="30dp"
                    android:background="@drawable/custom_button_enviar_contato"
                    android:fontFamily="@font/exo2_regular"
                    android:text="@string/btn_enviar"
                    android:textAlignment="center"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="30sp"

                    />

            </LinearLayout>


        </LinearLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_marginTop="95dp"
            android:src="@drawable/ic_circle_form" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginTop="120dp"
            android:src="@drawable/ic_email" />


    </RelativeLayout>

</FrameLayout>